--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,12 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+
+    buildFeatures{
+        viewBinding true
     }
 }
 
