--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:name=".App"
         android:supportsRtl="true"
         android:theme="@style/Theme.ApplicationArchitecture">
         <activity
-            android:name="com.gb.applicationarchitecture.MainActivity"
+            android:name="com.gb.applicationarchitecture.ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
